--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
-name=esp-mqtt
-version=1.0
-author=Ingo Randolf <contact@ingorandolf.info>
-maintainer=Ingo Randolf <contact@ingorandolf.info>
+name=ESP MQTT
+version=1.0.0
+author=Ingo Randolf
+maintainer=Ingo Randolf
 sentence=A Wrapper around mqtt for Arduino to be used with esp8266 modules.
 paragraph=It wraps a slightly modified version of mqtt for esp8266 ported by Tuan PM. Original code for esp: https://github.com/tuanpmt/esp_mqtt Original code for contiki: https://github.com/esar/contiki-mqtt
 category=Communication
